# test_used_website

./: .env.example  .gitignore  README.md  admins.json  e2e-edge-cases.mjs  e2e-master-test.mjs  features.mmd  package-lock.json  package.json  pyproject.toml  session.md
.opencode/: oh-my-openagent.jsonc  package-lock.json
.sisyphus/: boulder.json
.sisyphus/evidence/: server_job.xml  server_process.xml  task-9-full-journey.json
.sisyphus/notepads/used-laptops-backend/: learnings.md
.sisyphus/plans/: f7-notifications-final-qa.md  used-laptops-backend.md
app/: main.py
app/core/: config.py  exceptions.py  notifications.py  security.py
app/db/: database.py
app/models/: auth.py  laptops.py  messages.py  orders.py  parts.py  reviews.py  services.py
app/repositories/: __init__.py  base.py  user_repo.py
app/routers/: admin.py  auth.py  favorites.py  laptops.py  messages.py  orders.py  parts.py  reviews.py  services.py  users.py
app/services/: __init__.py  auth_service.py  base.py  favorite_service.py  image_service.py  laptop_service.py  message_service.py  notification_service.py  order_service.py  part_service.py  review_service.py  service_service.py  user_service.py
docs/postman/: auth.json  laptops.json  parts.json
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js  index.js
frontend/src/components/: Badge.jsx  Button.jsx  Card.jsx  EmptyState.jsx  Footer.jsx  ImageUpload.jsx  Input.jsx  Navbar.jsx  ProtectedRoute.jsx  PublicRoute.jsx  Spinner.jsx  StarRating.jsx  Toast.jsx
(+21 files in other folders)
